[package]
name = "json-split-aom"
version = "0.2.2"
edition = "2021"
description = "Split a large JSON file containing an array of maps into multiple files"
license = "MIT"
repository = "https://github.com/qtfkwk/json-split-aom"

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.30", features = ["derive", "wrap_help"] }
clap-cargo = "0.15.2"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
