[package]
name = "json-split-aom"
version = "0.3.0"
edition = "2024"
description = "Split a large JSON file containing an array of maps into multiple files"
license = "MIT"
repository = "https://github.com/qtfkwk/json-split-aom"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.46", features = ["derive", "wrap_help"] }
clap-cargo = "0.17.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
