[package]
name = "json-split-aom"
version = "0.3.4"
edition = "2024"
description = "Split a large JSON file containing an array of maps into multiple files"
license = "MIT"
repository = "https://github.com/qtfkwk/json-split-aom"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive", "wrap_help"] }
clap-cargo = "0.18.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
